fix: linux x86_64 bindings failing (#6)
* fix: linux x86 logger

* fix: typo archi

* fix: readme

* fix: typo gguf